--- a/docroot/sites/akdn/themes/akdn/sass/sass-extensions/_custom-utilities.scss
+++ b/docroot/sites/akdn/themes/akdn/sass/sass-extensions/_custom-utilities.scss
@@ -292,7 +292,7 @@
 }
 %related_pane {
 	margin: 0;
-	padding: 0 15px;
+	padding: 0 25px 0 15px;
 	width: 50%;
 	float: left;
 	color: #000;
